--- a/src/components/Footer/AvatarList.astro
+++ b/src/components/Footer/AvatarList.astro
@@ -5,8 +5,8 @@ type Props = {
 };
 const { path } = Astro.props as Props;
 const resolvedPath = `examples/docs/${path}`;
-const url = `https://api.github.com/repos/withastro/astro/commits?path=${resolvedPath}`;
-const commitsURL = `https://github.com/withastro/astro/commits/main/${resolvedPath}`;
+const url = `https://api.github.com/repos/NowYouKnowProgramming/webdev-learning-materials/commits?path=${resolvedPath}`;
+const commitsURL = `https://github.com/NowYouKnowProgramming/webdev-learning-materials/commits/main/${resolvedPath}`;
 
 type Commit = {
 	author: {
@@ -70,29 +70,38 @@ const additionalContributors = unique.length - recentContributors.length; // lis
 ---
 
 <!-- Thanks to @5t3ph for https://smolcss.dev/#smol-avatar-list! -->
-<div class="contributors">
-	<ul class="avatar-list" style={`--avatar-count: ${recentContributors.length}`}>
-		{recentContributors.map((item) => (
-			<li>
-				<a href={`https://github.com/${item.login}`}>
-					<img
-						alt={`Contributor ${item.login}`}
-						title={`Contributor ${item.login}`}
-						width="64"
-						height="64"
-						src={`https://avatars.githubusercontent.com/u/${item.id}`}
-					/>
-				</a>
-			</li>
-		))}
+<div class='contributors'>
+	<ul
+		class='avatar-list'
+		style={`--avatar-count: ${recentContributors.length}`}
+	>
+		{
+			recentContributors.map((item) => (
+				<li>
+					<a href={`https://github.com/${item.login}`}>
+						<img
+							alt={`Contributor ${item.login}`}
+							title={`Contributor ${item.login}`}
+							width='64'
+							height='64'
+							src={`https://avatars.githubusercontent.com/u/${item.id}`}
+						/>
+					</a>
+				</li>
+			))
+		}
 	</ul>
-	{additionalContributors > 0 && (
-		<span>
-			<a href={commitsURL}>{`and ${additionalContributors} additional contributor${
-				additionalContributors > 1 ? 's' : ''
-			}.`}</a>
-		</span>
-	)}
+	{
+		additionalContributors > 0 && (
+			<span>
+				<a
+					href={commitsURL}
+				>{`and ${additionalContributors} additional contributor${
+					additionalContributors > 1 ? 's' : ''
+				}.`}</a>
+			</span>
+		)
+	}
 	{unique.length === 0 && <a href={commitsURL}>Contributors</a>}
 </div>
 
@@ -106,7 +115,10 @@ const additionalContributors = unique.length - recentContributors.length; // lis
 		/* Default to displaying most of the avatar to
   enable easier access on touch devices, ensuring
   the WCAG touch target size is met or exceeded */
-		grid-template-columns: repeat(var(--avatar-count), max(44px, calc(var(--avatar-size) / 1.15)));
+		grid-template-columns: repeat(
+			var(--avatar-count),
+			max(44px, calc(var(--avatar-size) / 1.15))
+		);
 		/* `padding` matches added visual dimensions of
   the `box-shadow` to help create a more accurate
   computed component size */
@@ -118,7 +130,10 @@ const additionalContributors = unique.length - recentContributors.length; // lis
 		.avatar-list {
 			/* We create 1 extra cell to enable the computed 
     width to match the final visual width */
-			grid-template-columns: repeat(calc(var(--avatar-count) + 1), calc(var(--avatar-size) / 1.75));
+			grid-template-columns: repeat(
+				calc(var(--avatar-count) + 1),
+				calc(var(--avatar-size) / 1.75)
+			);
 		}
 	}
 
