--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,19 @@
 	margin: 0;
 }
 
+*::-webkit-scrollbar {
+	width: 5px !important;
+	height: 5px !important;
+}
+*::-webkit-scrollbar-track {
+	background: #38383800 !important;
+}
+*::-webkit-scrollbar-thumb {
+	background-color: #cfc9c578 !important;
+	border: 1px solid #1a1a1a !important;
+	border-radius: 2px !important;
+}
+
 /* Global focus outline reset */
 *:focus:not(:focus-visible) {
 	outline: none;
