--- a/src/components/LandingPage/LandingPageFooter.astro
+++ b/src/components/LandingPage/LandingPageFooter.astro
@@ -1,16 +1,16 @@
 <footer>
-	<a target='_blank' class='attribution' href='http://www.freepik.com'
-		>Landing page image by pikisuperstar / Freepik</a
-	>
+  <a target="_blank" class="attribution" href="http://www.freepik.com"
+    >Landing page image by pikisuperstar / Freepik</a
+  >
 </footer>
 
 <style>
-	footer {
-		background-color: #f806b0;
-		text-align: center;
-	}
+  footer {
+    background-color: #f806b0;
+    text-align: center;
+  }
 
-	footer a {
-		color: white;
-	}
+  footer a {
+    color: black;
+  }
 </style>
