--- a/src/components/Header/AstroLogo.astro
+++ b/src/components/Header/AstroLogo.astro
@@ -1,9 +1,12 @@
 <style>
-	img {
-		border-radius: 50%;
-		width: 50px;
-		aspect-ratio: 1/1;
-	}
+  img {
+    border-radius: 50%;
+    width: 50px;
+    aspect-ratio: 1/1;
+  }
 </style>
 
-<img src="/images/nukp-logo.png"/>
+<img
+  alt="bewebdev logo - computer backlit with pink color"
+  src="/images/nukp-logo.png"
+/>
