--- a/src/components/Header/AstroLogo.astro
+++ b/src/components/Header/AstroLogo.astro
@@ -1,12 +1,12 @@
 <style>
-  img {
-    border-radius: 50%;
-    width: 50px;
-    aspect-ratio: 1/1;
-  }
+	img {
+		border-radius: 50%;
+		width: 50px;
+		aspect-ratio: 1/1;
+	}
 </style>
 
 <img
-  alt="bewebdev logo - computer backlit with pink color"
-  src="/images/nukp-logo.png"
+	alt='bewebdev logo - computer backlit with pink color'
+	src='/images/nukp-logo.png'
 />
