--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -23,7 +23,7 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`;
 
 <html
 	dir={frontmatter.dir ?? 'ltr'}
-	lang={frontmatter.lang ?? 'en-us'}
+	lang={frontmatter.lang ?? 'en'}
 	class='initial'
 >
 	<head>
