--- a/src/components/LandingPage/Promo/Promo.module.css
+++ b/src/components/LandingPage/Promo/Promo.module.css
@@ -1,3 +1,17 @@
 .root {
-	background-image: linear-gradient(to top, #1c1531, #f806b0);
+	background-image: linear-gradient(to top, #1c1531 70%, #f806b0);
+	min-height: 100vh;
+	position: relative;
+	background-color: white;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 5rem;
+}
+
+.floating-paragraph {
+	position: relative;
+	z-index: 100;
+	background-color: black;
 }
