--- a/src/components/LandingPage/LandingPage.astro
+++ b/src/components/LandingPage/LandingPage.astro
@@ -20,7 +20,7 @@ const currentPage = Astro.url.pathname;
 	h2 {
 		text-align: center;
 		z-index: 1;
-		font-family: 'Work Sans', sans-serif;
+		font-family: 'Inter', sans-serif;
 		font-size: clamp(2rem, 5vw, 3.5rem);
 		color: white;
 	}
@@ -87,7 +87,7 @@ const currentPage = Astro.url.pathname;
 	<Header currentPage={currentPage} />
 	<main>
 		<div class='content'>
-			<h2>Web development learning materials</h2>
+			<h2>The best way to learn web development</h2>
 			<p>Carefully selected, verified, up to date</p>
 			<LandingPageLinks />
 		</div>
