--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,6 +32,16 @@
 	}
 }
 
+@font-face {
+	font-family: 'ReemKufiInk';
+	src: url('/fonts/ReemKufiInk-Regular.ttf');
+}
+
+@font-face {
+	font-family: 'Inter';
+	src: url('/fonts/Inter-Regular.ttf');
+}
+
 body {
 	display: flex;
 	flex-direction: column;
@@ -40,6 +50,7 @@ body {
 	font-size: 1rem;
 	font-size: clamp(0.9rem, 0.75rem + 0.375vw + var(--user-font-scale), 1rem);
 	line-height: 1.5;
+	-webkit-font-smoothing: antialiased;
 	max-width: 100vw;
 }
 
@@ -63,6 +74,7 @@ h3,
 h4,
 h5,
 h6 {
+	font-family: 'ReemKufiInk', sans-serif;
 	margin-bottom: 1rem;
 	font-weight: bold;
 	line-height: 1;
@@ -102,10 +114,6 @@ h5 {
 	font-size: 1rem;
 }
 
-p {
-	line-height: 1.65em;
-}
-
 .content ul {
 	line-height: 1.1em;
 }
@@ -113,6 +121,11 @@ p {
 p,
 .content ul {
 	color: var(--theme-text-light);
+}
+
+ul li {
+	font-family: 'ReemKufiInk', sans-serif;
+	line-height: 1.5;
 }
 
 small,
