--- a/src/components/LandingPage/Promo/Promo.module.css
+++ b/src/components/LandingPage/Promo/Promo.module.css
@@ -1,17 +1,25 @@
 .root {
 	background-image: linear-gradient(to top, #1c1531 70%, #f806b0);
-	min-height: 100vh;
 	position: relative;
 	background-color: white;
-	width: 100%;
-	height: 100%;
 	display: flex;
 	flex-direction: column;
 	gap: 5rem;
+	height: 500px;
 }
 
-.floating-paragraph {
-	position: relative;
+.container {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
+.paragraph {
 	z-index: 100;
+	scale: 2;
 	background-color: black;
+	position: absolute;
+	bottom: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
