Feat: add component ParallaxCard and Promo for landing page + working parallax

--- a/src/components/LandingPage/LandingPage.astro
+++ b/src/components/LandingPage/LandingPage.astro
@@ -108,6 +108,6 @@ import { Promo } from './Promo/Promo';
 			/>
 		</div>
 		<LandingPageFooter />
-		<Promo />
+		<Promo client:only='react' />
 	</main>
 </body>
