--- a/src/components/LandingPage/Promo/Promo.module.css
+++ b/src/components/LandingPage/Promo/Promo.module.css
@@ -4,8 +4,8 @@
 	background-color: white;
 	display: flex;
 	flex-direction: column;
-	gap: 5rem;
-	height: 500px;
+	gap: 7rem;
+	padding-top: 10rem;
 }
 
 .container {
