--- a/src/components/LandingPage/Promo/ParallaxCard.module.css
+++ b/src/components/LandingPage/Promo/ParallaxCard.module.css
@@ -7,16 +7,23 @@
 	margin-bottom: 3rem;
 	align-items: center;
 	flex-basis: 200px;
+	flex-wrap: wrap;
+	width: min(100%, 90vw);
+}
+
+.text {
+	position: relative;
+	z-index: 200;
+	text-shadow: black 2px 2px 22px;
 }
 
 .root > div {
-	flex: 1;
+	flex: 1 1 200px;
 }
 
 .imgContainer {
 	position: relative;
 	height: auto;
-	width: 800px;
 	aspect-ratio: 4/3;
 }
 
@@ -30,12 +37,10 @@
 
 .left {
 	flex-direction: row;
-	flex-wrap: wrap;
 }
 
 .right {
 	flex-direction: row-reverse;
-	flex-wrap: wrap-reverse;
 }
 
 .icon {
@@ -44,19 +49,6 @@
 	aspect-ratio: 1/1;
 	object-fit: scale-down;
 	z-index: 100;
-}
-
-.icon::before {
-	content: '';
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background-color: rgba(0, 0, 0, 0.334);
-	width: 100%;
-	height: 100%;
-	filter: blur(10px);
-	z-index: 99;
 }
 
 .icon img {
@@ -82,4 +74,43 @@
 	bottom: 0;
 	left: 30%;
 	transform: translate3d(-50%, 24%, 0) scale(1.5);
+}
+
+.right .iconOne {
+	transform: translate3d(-20%, 21%, 0);
+}
+
+.right .iconTwo {
+	transform: translate3d(-20%, -24%, 0) scale(0.8);
+}
+
+.right .iconThree {
+	transform: translate3d(50%, -24%, 0) scale(1.5);
+}
+
+@media screen and (max-width: 768px) {
+	.root {
+		gap: 5rem;
+	}
+
+	.iconOne,
+	.iconTwo,
+	.iconThree {
+		opacity: 0.3;
+	}
+
+	.iconOne {
+		top: -50%;
+		scale: 2;
+	}
+
+	.iconTwo {
+		top: -20%;
+		scale: 1.5;
+	}
+
+	.iconThree {
+		bottom: -20%;
+		scale: 2.5;
+	}
 }
