--- a/src/components/LandingPage/Promo/Promo.module.css
+++ b/src/components/LandingPage/Promo/Promo.module.css
@@ -1,7 +1,8 @@
 .root {
-	background-image: linear-gradient(to top, #1c1531 70%, #f806b0);
+	/* background-image: linear-gradient(to top, #1c1531 70%, #f806b0); */
+
+	background-size: 400% 100%;
 	position: relative;
-	background-color: white;
 	display: flex;
 	flex-direction: column;
 	gap: 7rem;
