--- a/src/components/LandingPage/LandingPageLinks.astro
+++ b/src/components/LandingPage/LandingPageLinks.astro
@@ -1,12 +1,15 @@
+---
+import DocsBtn from './DocsBtn.astro';
+---
+
 <div class='links'>
-	<a class='docs-btn' href='/introduction'><span>Get to the docs</span></a>
-	<a
-		class='docs-btn repo'
+	<DocsBtn href='/introduction' text='Get to the docs' />
+	<DocsBtn
 		href='https://github.com/NowYouKnowProgramming/webdev-learning-materials'
-		rel='noopener noreferrer'
-		target='_blank'
-		><span>Repository</span>
-	</a>
+		text='Repository'
+		isExternal
+		classes='repo'
+	/>
 </div>
 
 <style>
@@ -21,63 +24,5 @@
 	.links a {
 		flex: 1;
 		white-space: nowrap;
-	}
-
-	.docs-btn,
-	.docs-btn:active,
-	.docs-btn:hover,
-	.docs-btn:focus {
-		text-decoration: none;
-	}
-
-	.docs-btn {
-		font-size: 1.3rem;
-		background-color: white;
-		color: black;
-		font-weight: bold;
-		padding: 1rem 2rem;
-		border-radius: 8px;
-
-		transition: box-shadow 0.15s ease, transform 0.15s ease;
-	}
-	.docs-btn:hover {
-		box-shadow: rgba(0, 0, 0, 0.23) 0 2px 5px, rgb(255, 255, 255) 0 4px 0;
-		transform: translateY(-2px);
-		opacity: 1;
-	}
-	.docs-btn:active {
-		box-shadow: 0 2px 4px rgb(45 35 66 / 40%),
-			0 7px 13px -3px rgb(45 35 66 / 30%),
-			inset 0 5px 5px rgba(23, 26, 44, 0.344);
-		transform: translateY(2px);
-	}
-
-	.docs-btn span {
-		position: relative;
-	}
-
-	.docs-btn span::before {
-		content: '';
-		position: absolute;
-		bottom: -2px;
-		left: 0;
-		width: 0%;
-		height: 2px;
-		background-color: black;
-		transition: 0.2s;
-	}
-
-	.docs-btn:hover span::before {
-		width: 100%;
-	}
-
-	.docs-btn.repo span::before {
-		background-color: white !important;
-	}
-
-	.repo {
-		border: 2px white solid;
-		background-color: transparent;
-		color: white;
 	}
 </style>
