Feat: add pictures with free license to promo section and CTA button styles adjustments

--- a/src/components/LandingPage/DocsBtn.astro
+++ b/src/components/LandingPage/DocsBtn.astro
@@ -34,7 +34,8 @@ const css = `docs-btn ${classes ? classes : 'test'}`;
 		font-weight: bold;
 		padding: 1rem 2rem;
 		border-radius: 8px;
-
+		flex: 1;
+		white-space: nowrap;
 		transition: box-shadow 0.15s ease, transform 0.15s ease;
 	}
 	.docs-btn:hover {
