--- a/src/components/LandingPage/LandingImageAttribution.astro
+++ b/src/components/LandingPage/LandingImageAttribution.astro
@@ -1,15 +1,32 @@
 <div>
-	<a target='_blank' class='attribution' href='http://www.freepik.com'
-		>Landing page image by pikisuperstar / Freepik</a
-	>
+	<ul>
+		<li>
+			<a target='_blank' class='attribution' href='http://www.freepik.com'
+				>Landing page image by pikisuperstar / Freepik</a
+			>
+		</li>
+		<li>
+			<a target='_blank' class='attribution' href='https://storyset.com/online'
+				>Online illustrations by Storyset</a
+			>
+		</li>
+	</ul>
 </div>
 
 <style>
 	div {
 		text-align: center;
+		margin: 1rem 0;
 	}
 
 	div a {
 		color: white;
+	}
+
+	ul {
+		list-style: none;
+		display: flex;
+		gap: 1rem;
+		flex-wrap: wrap;
 	}
 </style>
