--- a/src/components/LandingPage/LandingPage.astro
+++ b/src/components/LandingPage/LandingPage.astro
@@ -29,7 +29,6 @@ import { Promo } from './Promo/Promo';
 		<Comparison />
 	</main>
 	<LandingPageEndingCTA />
-	<LandingImageAttribution />
 	<LandingPageFooter />
 	<style>
 		.welcome {
@@ -64,6 +63,7 @@ import { Promo } from './Promo/Promo';
 			flex-direction: column;
 			background-image: linear-gradient(to bottom, #1c1531 4%, transparent 30%),
 				radial-gradient(circle at 15% 15%, #f806b0 0%, #1c1531 70%);
+			overflow-x: hidden;
 		}
 
 		.attribution {
