--- a/src/components/LandingPage/LandingPageFooter.astro
+++ b/src/components/LandingPage/LandingPageFooter.astro
@@ -1,3 +1,7 @@
+---
+import LandingImageAttribution from './LandingImageAttribution.astro';
+---
+
 <footer>
 	<h2 class='sr-only'>Footer links</h2>
 	<ul>
@@ -23,6 +27,7 @@
 			>
 		</li>
 	</ul>
+	<LandingImageAttribution />
 </footer>
 
 <style>
