--- a/src/components/LandingPage/Promo/Comparison.astro
+++ b/src/components/LandingPage/Promo/Comparison.astro
@@ -9,17 +9,17 @@ const comparisonData: ComparisonData[] = [
 	{
 		name: 'Bootcamp',
 		downside: 'Expensive',
-		icon: '🏫',
+		icon: '💸',
 	},
 	{
 		name: 'Freecodecamp',
 		downside: 'Time consuming',
-		icon: '👨‍💻',
+		icon: '⌛',
 	},
 	{
 		name: 'Bewebdev.tech',
 		downside: 'Great for everyone!',
-		icon: '👍',
+		icon: '🤩',
 	},
 ];
 ---
