Fix: update component LandingImageAttribution
to have better semantics

--- a/src/components/LandingPage/LandingImageAttribution.astro
+++ b/src/components/LandingPage/LandingImageAttribution.astro
@@ -1,25 +1,19 @@
-<div>
-	<ul>
-		<li>
-			<a target='_blank' class='attribution' href='http://www.freepik.com'
-				>Landing page image by pikisuperstar / Freepik</a
-			>
-		</li>
-		<li>
-			<a target='_blank' class='attribution' href='https://storyset.com/online'
-				>Online illustrations by Storyset</a
-			>
-		</li>
-	</ul>
-</div>
+<h2 class='sr-only'>Image attribution links</h2>
+<ul>
+	<li>
+		<a target='_blank' class='attribution' href='http://www.freepik.com'
+			>Landing page image by pikisuperstar / Freepik</a
+		>
+	</li>
+	<li>
+		<a target='_blank' class='attribution' href='https://storyset.com/online'
+			>Online illustrations by Storyset</a
+		>
+	</li>
+</ul>
 
 <style>
-	div {
-		text-align: center;
-		margin: 1rem 0;
-	}
-
-	div a {
+	a {
 		color: white;
 	}
 
