Feat: change style for CTA button

--- a/src/components/LandingPage/DocsBtn.astro
+++ b/src/components/LandingPage/DocsBtn.astro
@@ -36,14 +36,16 @@ const css = `docs-btn ${classes ? classes : 'test'}`;
 		border-radius: 8px;
 		flex: 1;
 		white-space: nowrap;
-		transition: box-shadow 0.15s ease, transform 0.15s ease;
+		transition: cubic-bezier(0.17, 0.67, 0.11, 0.98) 0.3s 0.2s;
 	}
 	.docs-btn:hover {
 		box-shadow: rgba(0, 0, 0, 0.23) 0 2px 5px, rgb(255, 255, 255) 0 4px 0;
 		transform: translateY(-2px);
 		opacity: 1;
+		transition-delay: 0;
 	}
 	.docs-btn:active {
+		transition-delay: 0;
 		box-shadow: 0 2px 4px rgb(45 35 66 / 40%),
 			0 7px 13px -3px rgb(45 35 66 / 30%),
 			inset 0 5px 5px rgba(23, 26, 44, 0.344);
